# animal-classification-cnn

./: .gitignore  README.md  main.py  pyproject.toml  test_prediction.py
notebooks/: data_exploration.ipynb  model_experiments.ipynb
src/: data_processing.py  model.py  train.py  visualization.py
