[project]
name = "animal-classification-cnn"
version = "0.1.0"
description = "مشروع تصنيف الحيوانات باستخدام الشبكات العصبية التطبيقية (CNNs)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.3.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.0",
    "tensorflow>=2.15.0",
    "scikit-learn>=1.7.0",
    "Pillow>=10.0.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]